--- a/src/homePage/HomePage.scss
+++ b/src/homePage/HomePage.scss
@@ -1,98 +1,51 @@
 .home-page {
     margin: 20px auto 0px auto;
     color: white;
-    
+    .home-image {
+        img {
+            border-radius: 10px;
+            border: 1px solid black;
+            margin-top: 10px;
+        }
+    }
     .apple-badge {
         margin-top: 20px;
     }
-}
-
-.text {
-    margin: auto;
-    font-size: 20px;
-}
-
-@media screen and (max-width: 991px) {  
-    .title-text {
-        text-align: center;
+    .text {
+        margin: auto;
+        font-size: 20px;
     }
-}
-@media screen and (max-width: 768px) {  
-    .title-text {
-        font-size: 25px;
-    }
-}
-
-
-hr {
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
-
-p {
-    font-size: 20px;
-}
-
-.home-image {
     img {
-        border-radius: 10px;
-        border: 1px solid black;
+        width: inherit;
+    }
+    #apple {
+        position: absolute;
+        width: auto;
         margin-top: 10px;
     }
-}
-
-img {
-    width: inherit;
-}
-
-#apple {
-    position: absolute;
-    width: auto;
-    margin-top: 10px;
-}
-
-.gif {
-    margin: 20px auto 0px auto;
-}
-
-.buttons {
-    display: flex;
-}
-
-.buttons button{
-    width: 250px;
-    text-align: center;
-}
-
-#learn-more, #get-the-app {
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-    margin-bottom: 20px;
-}
-
-.submit {
-    background-color: #222;
-    border: 1px white solid;
-    color: white;
-    &:hover {
-        background-color: white;
-        border: 1px black solid;
-        color: black;
+    .gif {
+        margin: 20px auto 0px auto;
     }
-}
-
-.back {
-    background-color: white;
-    color: grey;
-    border: 1px solid grey;
-}
-
-@media screen and (max-width: 991px) {
-    p {
-        margin-top: 10px;
+    @media (max-width: '767px') {
+        .home-image {
+            padding: 0px;
+            img {
+                border-radius: 0;
+            }  
+        }
+        .text {
+            font-size: 16px;
+            line-height: 1.3;
+        }
     }
-    .buttons {
-        display: block;
+    @media screen and (max-width: 991px) {  
+        .title-text {
+            text-align: center;
+        }
+    }
+    @media screen and (max-width: 768px) {  
+        .title-text {
+            font-size: 25px;
+        }
     }
 }
