--- a/src/App.css
+++ b/src/App.css
@@ -3,12 +3,33 @@ body {
 }
 
 .page-content {
-    padding-top: 137px;
+    padding: 60px 15px 0px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
-@media screen and (max-width: 767px) {
+@media (min-width: 576px) {
     .page-content {
-        padding-top: 80px;
+        max-width: 540px;
+    }
+}
+
+@media (min-width: 768px) {
+    .page-content {
+        max-width: 720px;
+        padding: 137px 30px 0px;
+    }
+}
+
+@media (min-width: 992px) {
+    .page-content {
+        max-width: 960px;
+    }
+}
+
+@media (min-width: 1200px) {
+    .page-content {
+        max-width: 1140px;
     }
 }
 
@@ -18,4 +39,49 @@ input:focus, textarea:focus, button:focus {
 
 ul {
     padding-left: 0px;
+}
+
+hr {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.submit {
+    background-color: #222;
+    border: 1px white solid;
+    color: white;
+}
+
+.sumbit:hover {
+    background-color: white;
+    border: 1px black solid;
+    color: black;
+}
+
+.buttons {
+    display: flex;
+}
+
+.buttons button {
+    width: 250px;
+    text-align: center;
+}
+
+@media screen and (max-width: 991px) {
+    .buttons {
+        display: block;
+    }
+}
+
+#learn-more, #get-the-app {
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+.back {
+    background-color: white;
+    color: grey;
+    border: 1px solid grey;
 }
