--- a/src/FAQ/FAQ.scss
+++ b/src/FAQ/FAQ.scss
@@ -17,7 +17,7 @@
                 color: white;
             }
         }
-    } 
+    }
     .FAQ-nav {
         background-color: #464040;
         padding: 2px 8px;
@@ -25,13 +25,22 @@
         border: 1px solid white;
         margin: 5px;
     }
-
+    .FAQ-prompt {
+        font-size: 20px;
+    }
     @media screen and (max-width: 768px) {
         .FAQ-nav {
             display: inline-block;
         }
         .tabset {
             display: block;
+            // .tab {
+            //     font-size: 16px;
+            // }
+        } 
+        .FAQ-prompt {
+            line-height: 1.3;
+            font-size: 16px;
         }
     }
 }
