--- a/src/about/About.scss
+++ b/src/about/About.scss
@@ -1,13 +1,21 @@
 .about {
     color: white;
-    .about-header {
+    margin-left: auto;
+    margin-right: auto;
+    .team-meg-header {
         margin: 30px 0px;
         text-align: center;
     }
-}
-
-@media screen and (max-width: 768px) {
-    .about-us {
-        text-align: center;
+    .about-us-text {
+        font-size: 20px;
+    }
+    @media screen and (max-width: 768px) {
+        .about-us-header {
+            text-align: center;
+        }
+        .about-us-text {
+            font-size: 16px;
+            line-height: 1.3;
+        }
     }
 }
