--- a/src/howItWorks/howItWorks.scss
+++ b/src/howItWorks/howItWorks.scss
@@ -10,13 +10,14 @@
             font-size: 20px;
             margin: 10px auto 20px;
         }
+        @media (max-width: '767px') {
+            .section-text {
+                font-size: 16px;
+                line-height: 1.3;
+            }
+        }
         .person {
             font-style: italic;
-        }
-        img {
-            border-radius: 10px;
-            border: 1px solid black;
-            padding: 0px;
         }
     }
 }
