--- a/src/footer/Footer.scss
+++ b/src/footer/Footer.scss
@@ -20,10 +20,13 @@
             font-size: 20px;
         }
     }
-}
-
-.site-info-text {
-    color: white;
-    text-align: center;
-    margin-bottom: 20px;
+    .site-info-text {
+        color: white;
+        text-align: center;
+        margin-bottom: 20px;
+        a {
+            color: white;
+            font-weight: bold;
+        }
+    }
 }
