--- a/src/homePage/HomePage.scss
+++ b/src/homePage/HomePage.scss
@@ -1,6 +1,9 @@
 .home-page {
     margin: 20px auto 0px auto;
     color: white;
+    .front-title-text {
+        text-align: center;
+    }
     .home-image {
         img {
             border-radius: 10px;
@@ -18,10 +21,22 @@
     img {
         width: inherit;
     }
-    #apple {
-        position: absolute;
-        width: auto;
-        margin-top: 10px;
+    .get-the-app {
+        margin-top: 15px;
+        text-align: center;
+        .get-started {
+            background-color: #126702;
+            color: white;
+            border: 1px solid white;
+            font-weight: 700;
+            font-size: 20px;
+            padding: 5px 40px;
+            &:hover {
+                background-color: white;
+                color: #126702;
+                border: 1px solid #126702;
+            }
+        }
     }
     .gif {
         margin: 20px auto 0px auto;
@@ -34,7 +49,7 @@
             }  
         }
         .text {
-            font-size: 16px;
+            font-size: 18px;
             line-height: 1.3;
         }
     }
@@ -47,5 +62,12 @@
         .title-text {
             font-size: 25px;
         }
+    }
+}
+
+.modal-message {
+    text-align: left;
+    .beta-testing-list {
+        padding-left: 15px;
     }
 }
