--- a/src/about/About.scss
+++ b/src/about/About.scss
@@ -6,16 +6,16 @@
         margin: 30px 0px;
         text-align: center;
     }
-    .about-us-text {
-        font-size: 20px;
-    }
     @media screen and (max-width: 768px) {
         .about-us-header {
             text-align: center;
+        }  
+        .buttons {
+            display: block;
+            text-align: center;
         }
-        .about-us-text {
-            font-size: 18px;
-            line-height: 1.3;
-        }
+    }
+    .contact-us-header {
+        margin-top: 15px;
     }
 }
