--- a/src/blogPosts/allPosts/AllPosts.scss
+++ b/src/blogPosts/allPosts/AllPosts.scss
@@ -1,3 +1,24 @@
+.all-posts {
+    .topic-container {
+        text-align: center;
+        font-size: 20px;
+        .topic-select {
+            margin-left: 5px;
+            border: 1px solid black;
+            border-radius: 5px;
+            &:focus {
+                box-shadow: none;
+                outline: none;
+            }
+        }
+    }
+    @media (max-width: '767px') {
+        .topic-container {
+            font-size: 16px;
+        }
+    }
+}
+
 .page-control {
     display: flex;
     justify-content: center;
