--- a/src/profile/Profile.scss
+++ b/src/profile/Profile.scss
@@ -10,7 +10,7 @@
         background-color: white;
         max-width: 650px;
         button {
-            margin: 10px 0px;
+            margin-bottom: 15px;
         }
         @media screen and (max-width: 768px) {
             .profile-photo {
