updated register modal to register usernames

--- a/src/header/accountModals/registerModal/RegisterModal.scss
+++ b/src/header/accountModals/registerModal/RegisterModal.scss
@@ -1,10 +1,5 @@
-@import '../../../variables.scss';
-
-#register {
-    display: inline;
-    padding-right: 5px;
-    color: $megBlue;
-    font-weight: bold;
+.register-message {
+    margin-bottom: 10px;
 }
 
 .error-msg {
