--- a/src/header/accountModals/logInModal/LogInModal.scss
+++ b/src/header/accountModals/logInModal/LogInModal.scss
@@ -7,6 +7,16 @@
     font-weight: bold;
 }
 
+.login-modal-footer {
+    .learn-more {
+        border: 1px solid #126702;
+        background: transparent;
+        color: #126702;
+        border-radius: 5px;
+        margin-left: 5px;
+    }
+}
+
 .link {
     border: none;
     background: transparent;
