--- a/src/header/mobileHeader/sideMenu/SideMenu.scss
+++ b/src/header/mobileHeader/sideMenu/SideMenu.scss
@@ -9,9 +9,19 @@
     #menu-toggle {
         float: left;
         margin-left: 15px;
+        border: none;
+        background: transparent;
     }
 }
-    
+
+button.menu-link {
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    width: 100%;
+    text-align: left;
+    cursor: pointer;
+}
 
 .menu {
     height: 100%; 
@@ -32,7 +42,7 @@
         text-align: center;
         border-bottom: 3px solid $megBlue;
     }
-    a {
+    a, .menu-link {
         padding: 8px 8px 8px 12px;
         text-decoration: none;
         font-size: 20px;
@@ -41,14 +51,17 @@
         transition: 0.3s;
         border-bottom: 1px solid grey;
         white-space: nowrap;
+        background: transparent;
     }
     #closebtn {
         position: absolute;
-        top: -12px;
+        top: -6px;
         right: 5px;
         font-size: 36px;
         margin-left: 50px;
-        border-bottom: none;
+        border: none;
+        background: transparent;
+        color: #21a1af;
     }
     @media screen and (max-width: '768px') {
         .panel-title {
@@ -56,7 +69,7 @@
             height: 62px;
         }
         #closebtn {
-            top: -7px;
+            top: -2px;
         }
     }
     .blog-menu {
