--- a/src/header/accountModals/logInModal/LogInModal.scss
+++ b/src/header/accountModals/logInModal/LogInModal.scss
@@ -15,6 +15,9 @@
         border-radius: 5px;
         margin-left: 5px;
         cursor: pointer;
+        &:hover {
+            text-decoration: underline;
+        }
     }
 }
 
