--- a/src/header/mobileHeader/sideMenu/SideMenu.scss
+++ b/src/header/mobileHeader/sideMenu/SideMenu.scss
@@ -114,7 +114,7 @@ button.menu-link {
     }
     .side-menu {
         float: right;
-        margin: auto 0px;
+        margin: auto 0px auto -5px;
         padding: 0px;
         width: auto;
     }
