--- a/src/blogPosts/post/Post.scss
+++ b/src/blogPosts/post/Post.scss
@@ -41,6 +41,7 @@
         float: right;
     }
     .post-body {
+        white-space: pre-line;
         font-size: 20px;
     }
     .post-footer a {
