--- a/src/homePage/testimonials/Testimonials.scss
+++ b/src/homePage/testimonials/Testimonials.scss
@@ -16,4 +16,9 @@
         font-style: italic;
         font-size: 18px;
     }
+    @media (max-width: '767px') {
+        .testimonials-image {
+            border: none;
+        }
+    }
 }
