--- a/src/about/About.scss
+++ b/src/about/About.scss
@@ -6,7 +6,7 @@
         margin: 30px 0px;
         text-align: center;
     }
-    @media screen and (max-width: 768px) {
+    @media (max-width: 768px) {
         .about-us-header {
             text-align: center;
         }  
@@ -17,5 +17,11 @@
     }
     .contact-us-header {
         margin-top: 15px;
+    }
+}
+
+@media (max-width: 767px) {
+    .about {
+        color: black;
     }
 }
