--- a/src/blogPosts/post/Post.scss
+++ b/src/blogPosts/post/Post.scss
@@ -70,8 +70,11 @@
     margin-bottom: 20px;
 }
 
-@media screen and (max-width: 768px) {
+@media (max-width: 768px) {
     .post-title {
         font-size: 20px;
+    }
+    .post{
+        background: lightgrey;
     }
 }
