--- a/src/conduct/Conduct.scss
+++ b/src/conduct/Conduct.scss
@@ -17,6 +17,7 @@
 
 @media (max-width: '767px') {
     .conduct {
+        color: black;
         font-size: 18px;
         line-height: 1.3;
         .conduct-header {
