--- a/src/footer/Footer.scss
+++ b/src/footer/Footer.scss
@@ -15,18 +15,33 @@
         padding: 2px 8px;
         margin: 2px 10px;
         a {
-            color: white;
             font-weight: bold;
             font-size: 20px;
         }
     }
     .site-info-text {
-        color: white;
         text-align: center;
-        margin-bottom: 20px;
+        padding-bottom: 20px;
         a {
-            color: white;
+            color: black;
             font-weight: bold;
         }
+    }
+}
+
+@media (min-width: '768px') {
+    .site-info-text {
+        color: white;
+        a {
+            color: white;
+        }
+    }
+    li {
+        a {
+            color: white;
+        }
+    }
+    .media-logo {
+        color: white;
     }
 }
