--- a/src/header/mobileHeader/sideMenu/SideMenu.scss
+++ b/src/header/mobileHeader/sideMenu/SideMenu.scss
@@ -30,7 +30,7 @@ button.menu-link {
     z-index: 1;
     top: 0;
     background: rgba(255, 255, 255, 0.863);
-    overflow-x: hidden;
+    overflow: hidden;
     transition: 0.5s;
     .panel-title {
         font-weight: bold;
@@ -61,7 +61,7 @@ button.menu-link {
         margin-left: 50px;
         border: none;
         background: transparent;
-        color: #21a1af;
+        color: $megBlue;
     }
     @media screen and (max-width: '768px') {
         .panel-title {
@@ -107,7 +107,6 @@ button.menu-link {
 @media screen and (min-width: 768px) {
     #nav-menu {
         right: 0;
-        border-left: 1px solid grey;
         a {
             text-align: left;
         }
