--- a/src/healthyOptions/HealthyOptions.scss
+++ b/src/healthyOptions/HealthyOptions.scss
@@ -24,7 +24,7 @@
             margin: 0px 5px 20px;
             border-radius: 50%;
             line-height: normal;
-            border: none;
+            border: 2px solid grey;
             color:#fff; 
             &:hover {
                 font-weight: bold;
@@ -32,6 +32,16 @@
         }
         .active {
             font-weight: bold;
+        }
+    }
+}
+
+@media (max-width: 767px) {
+    .healthy-options {
+        .options-bubbles>.bubble {
+            height: 125px;
+            width: 125px;
+            font-size: 22px;
         }
     }
 }
