updated healthy options to read from database

--- a/src/healthyOptions/HealthyOptions.scss
+++ b/src/healthyOptions/HealthyOptions.scss
@@ -1,6 +1,7 @@
 .healthy-options {
     background-color: white;
     margin-top: 20px;
+    margin-bottom: 50px;
     #just-healthy { 
         background-color:#05F509; 
     }   
