--- a/src/blogPosts/newPost/NewPost.scss
+++ b/src/blogPosts/newPost/NewPost.scss
@@ -37,6 +37,12 @@
         width: 100%;
         margin-bottom: 15px;
     }
+    
+    @media (max-width: 767px) {
+        &.page {
+            background: $megBlue;
+        }
+    }
 }
 
 .modal-body { 
