Updated mobile experience of Healthy Options and Shopping List

--- a/src/healthyOptions/foodsTable/FoodsTable.scss
+++ b/src/healthyOptions/foodsTable/FoodsTable.scss
@@ -2,9 +2,9 @@
     .table {
         border: 1px solid #ddd;
         margin: auto;
-        .shopping-list {
-            width: 175px;
-            text-align: right;   
+        .shopping-list-link {
+            width: 155px;
+            float: right;   
         }
     }
     .add-remove {
