--- a/src/healthyOptions/shoppingList/ShoppingList.scss
+++ b/src/healthyOptions/shoppingList/ShoppingList.scss
@@ -33,9 +33,12 @@
             font-size: 20px;
             vertical-align: bottom;
         }
-        .submit {
+        .add-item-button {
             width: 22%;
             margin-left: 1%;
+            border: 1px solid black;
+            background-color: #28a745;
+            color: white;
         }
     }
     @media (min-width: 768px) {
