--- a/src/header/Header.scss
+++ b/src/header/Header.scss
@@ -30,6 +30,7 @@
     pointer-events: none;
     margin: 10px;
     cursor: pointer;
+    border-radius: 10px;
     @media (max-width: '768px') {
         height: 40px;
         width: 40px;
