--- a/src/homePage/HomePage.scss
+++ b/src/homePage/HomePage.scss
@@ -70,17 +70,7 @@
 .get-the-app {
     margin-top: 15px;
     text-align: center;
-    .get-started {
-        background-color: #126702;
-        color: white;
-        border: 1px solid white;
-        font-weight: 700;
-        font-size: 20px;
-        width: 288px;
-        &:hover {
-            background-color: white;
-            color: #126702;
-            border: 1px solid #126702;
-        }
+    a img {
+        height: 60px
     }
 }
