Updated react version, styling, added coach reports

--- a/src/healthyOptions/foodsTable/FoodsTable.scss
+++ b/src/healthyOptions/foodsTable/FoodsTable.scss
@@ -8,9 +8,8 @@
         }
     }
     .add-remove {
-        padding: none;
         cursor: pointer;
-        float: right;
+        text-align: center;
         button {
             border: none;
             background: transparent;
