--- a/src/homePage/testimonials/Testimonials.scss
+++ b/src/homePage/testimonials/Testimonials.scss
@@ -6,7 +6,7 @@
     .testimonials-image {
         border: 1px solid black;
         border-radius: 10px;
-        width: inherit;
+        width: 100%;
     }
     .quote {
         font-weight: 700;
