--- a/src/mealPlan/MealPlan.scss
+++ b/src/mealPlan/MealPlan.scss
@@ -3,8 +3,11 @@
     gap: 0.25em;
     flex-wrap: nowrap;
     border-bottom: none;
-    .options-tab {
+    & > * {
         flex-basis: 25%;
+    }
+    .options-tab {
+        width: 100%;
         text-align: center;
         font-weight: bold;
         border: none;
