--- a/src/FAQ/FAQ.scss
+++ b/src/FAQ/FAQ.scss
@@ -13,6 +13,7 @@
         .tab {
             color: white;
             font-size: 20px;
+            text-decoration: none;
             &:hover{
                 color: white;
             }
