--- a/src/homePage/HomePage.scss
+++ b/src/homePage/HomePage.scss
@@ -5,7 +5,7 @@
             border-radius: 10px;
             border: 1px solid black;
             margin-top: 10px;
-            width: inherit;
+            width: 100%;
         }
     }
     .gif {
