--- a/src/header/mobileHeader/MobileHeader.scss
+++ b/src/header/mobileHeader/MobileHeader.scss
@@ -5,15 +5,17 @@
     border-bottom: 1px solid grey;
     z-index: 5;
     color: white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0px 10px;
     .mobile-title {
         font-weight: bold;
         font-size: 25px;
         margin: 10px auto;
     }
-    .mobile-login {
-        margin: auto 20px auto 10px;
-        width: 80px;
-        text-align: right;
+    .mobile-login, .side-menu {
+        flex-basis: 10%;
     }
     #log-in {
         color: white;
